[project]
name = "voice-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "groq>=1.4.0",
    "livekit-agents[cartesia,deepgram,groq,silero,turn-detector]~=1.6",
    "livekit-api~=1.1",
    "livekit-plugins-bey>=1.6.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
